<resources>
    <string name="app_name">Phonoplayer</string>
    <string name="tracks">Tracks</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>
    <string name="tracks_">Tracks (%d)</string>
    <string name="albums_">Albums (%d)</string>

    <!-- Placeholders -->
    <string name="title_dummy">A really long and almost infinite song name</string>
    <string name="song_track_no">01.</string>
    <string name="song_duration">01:30</string>
    <string name="song_artist">Song Artist</string>
    <string name="album_title">Album Title</string>
    <string name="album_artist">Album Artist</string>
    <string name="na">N/A</string>
    <string name="_00_00">00:00</string>

    <!-- Actions -->
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="now_playing">Now Playing</string>
    <string name="empty_songs">No songs in your library… yet!</string>
    <string name="empty_queue">Queue is empty!</string>
    <string name="empty_playlists">No playlists in your library… yet!</string>
    <string name="header">header</string>

    <!-- Menu -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="search_hint">Search for a song…</string>

    <!-- Dialogs -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_track">Delete Track</string>
    <string name="delete_album">Delete Album</string>
    <string name="confirm_delete_song">Are you sure you want to delete this track?</string>
    <string name="confirm_delete_album">Are you sure you want to delete this album? This will delete %s.</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="album_artist_name">Album Artist Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="album_name">Album Name</string>
    <string name="track_name">Track Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- sort -->
    <string name="sort">Sort</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="by_artist">By Artist</string>
    <string name="by_album">By Album</string>
    <string name="by_release">By Release</string>
    <string name="by_number_of_tracks">By Number of Tracks</string>
    <string name="list">List</string>
    <string name="grid_2x2">Grid 2×2</string>
    <string name="grid_3x3">Grid 3×3</string>
    <string name="by_number_of_albums">By Number of Albums</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="refresh">Re-scan Library</string>

    <string name="nb_of_deleted_tracks">%d track(s) deleted successfully.</string>
    <string name="nb_of_updated_tracks">%d track(s) updated successfully.</string>

    <string name="shuffle_mode_on">Shuffle Mode ON</string>
    <string name="shuffle_mode_off">Shuffle Mode OFF</string>
    <string name="repeat_off">Repeat OFF</string>
    <string name="repeat_one">Repeat 1</string>
    <string name="repeat_all">Repeat all</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_tab_settings">TabSettingsActivity</string>

    <!-- Preference Titles -->
    <string name="playback">Playback</string>
    <string name="customize">Customization</string>
    <string name="information">Information</string>

    <!-- Messages Preferences -->
    <string name="custom_app_name">Custom app name</string>
    <string name="theme">Theme</string>
    <string name="manage_tabs">Manage tabs</string>
    <string name="clear_settings">Clear settings</string>

    <!-- Shared Preferences Keys -->
    <string name="pref_key_settings_play_speed">key_play_speed</string>
    <string name="pref_key_settings_app_name">key_app_name</string>
    <string name="pref_key_settings_theme">key_theme</string>
    <string name="pref_key_settings_about">key_about</string>
    <string name="pref_key_settings_tabs">key_manage_tabs</string>
    <string name="pref_key_tab_settings_tab">key_tabs</string>
    <!-- Preference Keys -->
    <string name="pref_key_song">key_song</string>
    <string name="pref_key_song_list">key_song_list</string>
    <string name="pref_key_shuffle_enabled">key_shuffle</string>
    <string name="pref_key_repeat_mode">key_repeat_mode</string>
    <string name="pref_key_position">key_position</string>
    <string name="pref_key_tracks_sort">key_tracks_sort</string>
    <string name="pref_key_albums_sort">key_albums_sort</string>
    <string name="pref_key_artists_sort">key_artists_sort</string>
    <string name="pref_key_genres_sort">key_genres_sort</string>

    <!-- Sync Preferences -->
    <string name="version">Version</string>
    <string name="version_no">1.0.0</string>
    <string name="author">github.com/zahichemaly</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="play_speed">Play speed</string>
    <string name="slash">/</string>
    <string name="volume">Volume</string>
    <string name="lyrics">LYRICS</string>


</resources>
