<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/customize">

        <EditTextPreference
            app:defaultValue="@string/app_name"
            app:icon="@drawable/ic_pencil"
            app:key="@string/pref_key_app_name"
            app:title="@string/custom_app_name"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="system"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:icon="@drawable/ic_brush"
            app:key="@string/pref_key_theme"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:icon="@drawable/ic_tabs"
            android:key="@string/version"
            android:persistent="false"
            android:summary="@string/manage_tabs"
            android:title="@string/manage_tabs" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/information">

        <Preference
            app:icon="@drawable/ic_info"
            android:key="@string/version"
            android:persistent="false"
            android:summary="@string/version_no"
            android:title="@string/version" />

        <Preference
            android:icon="@drawable/ic_github"
            android:key="@string/pref_key_about"
            android:persistent="false"
            android:summary="@string/author"
            android:title="@string/about">
            <!--<intent android:action="com.zc.phonoplayer.ABOUT" />-->
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>