<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_tracks"
        android:icon="@drawable/ic_tracks"
        android:title="@string/tracks"
        android:titleCondensed="string" />

    <item
        android:id="@+id/item_albums"
        android:icon="@drawable/ic_album"
        android:title="@string/albums"
        android:titleCondensed="string" />

    <item
        android:id="@+id/item_artists"
        android:icon="@drawable/ic_artist"
        android:title="@string/artists"
        android:titleCondensed="string" />

    <item
        android:id="@+id/item_genres"
        android:icon="@drawable/ic_genre"
        android:title="@string/genres"
        android:titleCondensed="string" />

    <item
        android:id="@+id/item_playlists"
        android:icon="@drawable/ic_playlist"
        android:title="@string/playlists"
        android:titleCondensed="string" />

</menu>
