<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/song_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".ui.activities.SongActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_color"
        app:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/card_title_text_color"
        app:title="@string/now_playing" />

    <com.zc.phonoplayer.ui.components.CircularSeekBar
        android:id="@+id/seek_bar"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="100dp"
        app:circle_color="@color/sky_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/song_art"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_default_music"
        app:layout_constraintBottom_toBottomOf="@id/seek_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/seek_bar">

    </de.hdodenhof.circleimageview.CircleImageView>

    <RelativeLayout
        android:id="@+id/media_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        app:layout_constraintBottom_toBottomOf="@id/seek_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/seek_bar">

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="@dimen/button_width_height_small"
            android:layout_height="@dimen/button_width_height_small"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_previous" />

        <ImageButton
            android:id="@+id/play_pause_button"
            android:layout_width="@dimen/button_width_height_large"
            android:layout_height="@dimen/button_width_height_large"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_pause" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="@dimen/button_width_height_small"
            android:layout_height="@dimen/button_width_height_small"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_next" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/media_extra_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seek_bar">

        <ImageButton
            android:id="@+id/shuffle_button"
            android:layout_width="@dimen/button_width_height_small"
            android:layout_height="@dimen/button_width_height_small"
            android:layout_alignParentStart="true"
            android:background="@drawable/ic_shuffle_enabled" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/song_elapsed_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/_00_00"
                android:textColor="@color/card_title_text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/slash"
                android:textColor="@color/card_title_text_color" />

            <TextView
                android:id="@+id/song_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_00"
                android:textColor="@color/card_title_text_color" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/repeat_button"
            android:layout_width="@dimen/button_width_height_small"
            android:layout_height="@dimen/button_width_height_small"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_repeat_all" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/song_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        android:padding="@dimen/spacing_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/media_extra_buttons_layout">

        <TextView
            android:id="@+id/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_xxlarge"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxWidth="@dimen/max_width_normal"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/card_title_text_color"
            android:textSize="@dimen/text_size_xxlarge"
            android:textStyle="bold"
            tools:text="@string/title_dummy" />

        <TextView
            android:id="@+id/song_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_small"
            android:maxWidth="@dimen/max_width_normal"
            android:textColor="@color/card_content_text_color"
            android:textSize="@dimen/text_size_large"
            tools:text="@string/title_dummy" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
